--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<html>
+  <title>
+    The plant site
+  </title>
+   
+    <body>
+    <h1>welcome to my wonderful site
+      </body>
+    <style>
+      body{backround-color:green
+      
+      </html>
+    
+   
