--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       </body>
     <style>
       body{backround-color:green;
+        color:#ffff;
+        text-align:center;
+        )
       
       </html>
     
