--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 
-<html>
-  <title>
-    The plant site
-  </title>
-   
-    <body>
-    <h1>welcome to my wonderful site
-      </body>
-     
-      </html>
-    
+<body>
+  <h1>johns awesome plant site</h1>
+  <h2>lets start off with an intro my name is john and I think i actuall made a website</h2>
+  
+</body>
    
