--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
-<body>
-  <h1>johns awesome plant site</h1>
-  <h2>lets start off with an intro my name is john and I think i actuall made a website</h2>
-  
-</body>
+<title>
+  <my plant site/>
+  <title/>
   
 </html>
    
