--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   </title>
   
   <body>
-    <h1> this is the first attempt</h1>
+    <h1> This is the plant based website :)</h1>
   </body>
-  
+ 
+  <style>
+    body {
+      background-color:green;
+    }
+   
   
 </html>
    
