--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     body {
       background-color:green;
     }
-   
+  <div id=list>
+<ul>
+<li><ahref="#">menu1</a></i>
+</ul>
+</div 
   
 </html>
-    <div id=list>
-<ul>
-<li><ahref="plants">menu1</a></i>
-</ul>
-</div>
-   
+
