--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     body {
       background-color:green;
     }
-  <div id=list>
+</html>
+    <html>
+    <div id=list>
 <ul>
 <li><ahref=plants>menu1</a></i>
 </ul>
