--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
       background-color:green;
     }
 </html>
-    <html>
-    <div id=list>
-<ul>
-<li><ahref=plants>menu1</a></i>
-</ul>
-</div 
-  
-</html>
 
+    <div class="vertical-menu">
+  <a href="#" class="active">Home</a>
+  <a href="#">Link 1</a>
+  <a href="#">Link 2</a>
+  <a href="#">Link 3</a>
+  <a href="#">Link 4</a>
+</div>
