--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </html>
 
     <div class="vertical-menu">
-  <a href="#" class="active">Home</a>
-  <a href="#">Link 1</a>
-  <a href="#">Link 2</a>
-  <a href="#">Link 3</a>
-  <a href="#">Link 4</a>
+  <a href="menu" class="active">Home</a>
+  <a href="4">Link 1</a>
+  <a href="3">Link 2</a>
+  <a href="2">Link 3</a>
+  <a href="1">Link 4</a>
 </div>
