--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
       background-color:green;
     }
 </html>
-
-    <div class="vertical-menu">
-  <a href="menu" class="active">Home</a>
-  <a href="4">Link 1</a>
-  <a href="3">Link 2</a>
-  <a href="2">Link 3</a>
-  <a href="1">Link 4</a>
-</div>
+<button>
+    <clickme>
+    </button>
