--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
-<title>
-  my plant site
-  </title>
+<head>
+  <title>johns plant site</title>
+  <meta charset="utf-8"/>
   
   <body>
     <h1> This is the plant based website :)</h1>
@@ -12,6 +13,4 @@
       background-color:green;
     }
 </html>
-<button>
-    <clickme>
-    </button>
+
