--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
   <title>johns plant site</title>
   <meta charset="utf-8"/>
-  
-  <body>
-    <h1> This is the plant based website :)</h1>
-  </body>
- 
-  <style>
-    body {
-      background-color:green;
-    }
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+  <h1>lets see some plants</h1>
+  <h3>help a plant out.</h3>
+  <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href="cities.html">list</a>of cool plants.</p>
+  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes2.jpg"/>
+</body>
 </html>
-<p>
-    <ahref="plants.html">list</a>
-    of plants</p>
+
