--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>johns plant site</title>
+  <title>johns plants</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  <h1>lets see some plants</h1>
-  <h3>help a plant out.</h3>
-  <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href="cities.html">list</a>of cool plants.</p>
-  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes2.jpg"/>
-</body>
-</html>
+  <div class="container">
+    <div class="nav">
+      <h2>categories</h2>
+      <ul>
+        <li>annuals</li>
+        <li>perenials</li>
+        <li>bienniels</li>
+        <li>herbaceous</li>
+        <li>woody</li>
+      </ul>
