--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
   <title>johns plants</title>
   <meta charset="utf-8"/>
-  </head>
+  <link rel="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz" type="text/css" href="main.css">
+</head>
 <body>
-  <div class="container">
-    <div class="nav">
-      <h2>categories</h2>
-      <ul>
-        <li>annuals</li>
-        <li>perenials</li>
-        <li>bienniels</li>
-        <li>herbaceous</li>
-        <li>woody</li>
-      </ul>
+  <h1>johns plants</h1>
+  <h3>plant somthing.</h3>
+  <h4>Escape the mental strain of computer work.</h4>
+</body>
+</html>
