--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>johns plants</title>
   <meta charset="utf-8"/>
-  <link rel="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz" type="text/css" href="main.css">
+  <link rel="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz">
 </head>
 <body>
   <h1>johns plants</h1>
