--- a/index.html
+++ b/index.html
@@ -11,3 +11,18 @@
   <h4>Escape the mental strain of computer work.</h4>
 </body>
 </html>
+
+<html>
+  <div class="container">
+    <div class="nav">
+      <h2>categories</h2>
+      <ul>
+        <li>annuals</li>
+        <li>perenials</li>
+        <li>bienniels</li>
+        <li>herbaceous</li>
+        <li>woody</li>
+      </ul>
+      
+      
+      </html>
