--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <title>johns plants</title>
   <meta charset="utf-8"/>
-  <link rel="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz">
 </head>
 <body>
   <h1>johns plants</h1>
   <h3>plant somthing.</h3>
   <h4>Escape the mental strain of computer work.</h4>
 </body>
+  <img
+       src="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz">
 </html>
 
 <html>
