--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <h3>plant somthing.</h3>
   <h4>Escape the mental strain of computer work.</h4>
 </body>
-  <img
+  <src
        src="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz">
-  </img>
+  </src>
 </html>
 
 <html>
