--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <h3>plant somthing.</h3>
   <h4>Escape the mental strain of computer work.</h4>
 </body>
-  <src
-       src="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz">
-  </src>
-</html>
+  <img
+       src="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz"/>
+ </html>
 
 <html>
   <div class="container">
