--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h4>Escape the mental strain of computer work.</h4>
 </body>
   <img
-       src="https://www.whiteflowerfarm.com/dahlia-wizard-of-oz"/>
+       src="http://www.rosecottageplants.co.uk/images/products/large/735.jpg"/>
  </html>
 
 <html>
